<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Recipe App</string>

    <!-- Array of pages which are present in the navigation drawer -->
    <string-array name="pages_array">
        <item>Ingredient search</item>
        <item>Recipe search</item>
        <item>Favourites</item>
        <item>Shopping list</item>
        <item>Settings</item>
    </string-array>

    <string-array name="sign_in_array">
        <item>Sign in</item>
    </string-array>

    <string name="fragment_recipe">Recipe</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_button">Button</string>
    <string name="ingredient_search_hint">Enter an ingredient</string>
    <string name="recipe_search_hint">Search for a recipe</string>
    <string name="remove_favourite">Do you want remove this recipe from favorites</string>
    <string name="button_OK">OK</string>
    <string name="button_remove">Remove</string>
    <string name="button_cancel">Cancel</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_text">Please sign in, to use this feature.</string>

    <string name="sign_in">Sign in</string>
    <string name="revoke_access">Revoke Access</string>

    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="comments">Comments</string>
    <string-array name="font_sizes">
        <item>75 %</item>
        <item>100 %</item>
        <item>125 %</item>
        <item>150 %</item>
    </string-array>
    <string name="add_comment">Add comment</string>
    <string name="comment_by">Comment by</string>


    <!-- The label for use as a searchable item -->
    <string name="search_label">Dictionary</string>

    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Search the dictionary</string>

    <!-- The menu entry that invokes search. -->
    <string name="menu_search">Search</string>

    <!-- The description that will show up in the search settings for this source.  -->
    <string name="settings_description">Definitions of words</string>

    <!-- General instructions in the main activity. -->
    <string name="search_instructions">Use the search box in the Action Bar to look up a word</string>

    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
        <item quantity="one">%1$d result for \"%2$s\": </item>
        <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>

    <!-- Search failure message. -->
    <string name="no_results">No results found for \"%s\"</string>

</resources>
