<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/color_gradient"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="34sp"
            android:textStyle="italic"
            android:text="@string/sign_in_text"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:visibility="gone"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/revoke_access_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/revoke_access"
            android:visibility="gone" />
</LinearLayout>