<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <aau.sw8.recipe.ObservableScrollView
        android:id="@+id/recipe_scroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/recipe_picture_placeholder"
                android:id="@+id/recipe_picture_placeholder"/>

            <TextView
                android:id="@+id/recipeDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#80000000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textSize="12pt"
                    android:textStyle="italic"
                    android:layout_gravity="center_vertical"/>
                <!--
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Prep time X, serves 4"
                    android:gravity="right"/>
                    -->
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#80000000" />

            <LinearLayout
                android:id="@+id/ingredientGroupsLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:minHeight="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <!-- The margin on the bottom is specified on each RecipeIngredientGroupList -->
                <!-- Add ingredient groups programmatically -->
                </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#80000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instructions"
                    android:textSize="12pt"
                    android:textStyle="italic"
                    android:layout_gravity="center_vertical"/>
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/fontSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/font_sizes"
                        android:layout_gravity="center_vertical|right"/>
                </FrameLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#80000000" />

            <aau.sw8.recipe.InstructionList
                android:id="@+id/instructionList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#80000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"
                    android:textSize="12pt"
                    android:textStyle="italic"
                    android:layout_gravity="center_vertical"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_comment"
                        android:layout_gravity="right|center_vertical"/>
                </FrameLayout>

                </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="#80000000" />

            <aau.sw8.recipe.RecipeCommentList
                android:id="@+id/recipeCommentList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:minHeight="@dimen/activity_vertical_margin"/>

        </LinearLayout>

    </aau.sw8.recipe.ObservableScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/recipe_image_height"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/recipe_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/recipe_name"
                android:layout_alignParentBottom="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="6dp"
                android:padding="3dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="12pt"
                android:textColor="#ffffff"
                android:shadowColor="#222222"
                android:shadowDx="3.0"
                android:shadowDy="3.0"
                android:shadowRadius="10"/>

        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#80000000" />

    </LinearLayout>

</FrameLayout>